--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 		"build": "./scripts/build.sh",
 		"build:link": "./scripts/build-link.sh",
 		"all": "concurrently \"yarn lint\" \"yarn lint:ts\" \"yarn test\" \"yarn docs:build && yarn build && yarn build:link && yarn test:e2e\"",
-		"docs": "concurrently \"npx markserv README.md\" \"yarn docs:watch\"",
+		"docs": "concurrently \"markserv --address 0.0.0.0 README.md\" \"yarn docs:watch\"",
 		"docs:build": "./scripts/docs-build.sh",
-		"docs:watch": "chokidar README.ts -c \"yarn docs:build\""
+		"docs:watch": "SHELL=/bin/bash chokidar README.ts -c \"yarn docs:build\""
 	},
 	"devDependencies": {
 		"@tsconfig/esm": "^1.0.5",
@@ -37,6 +37,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.2",
 		"jest": "^29.7.0",
+		"markserv": "^1.17.4",
 		"prettier": "^3.1.1",
 		"ts-jest": "^29.1.1",
 		"typescript": "^5.3.3"
