--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"@tsconfig/strictest/tsconfig.json",
 		"@tsconfig/esm/tsconfig.json"
 	],
-	"include": ["src", "README.ts"],
+	"include": ["./src", "./README.ts", "./README.example.ts"],
 	"compilerOptions": {
 		"noEmit": true,
 		"skipLibCheck": false,
