--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 	"ignorePatterns": ["dist/**"],
 	"rules": {
 		"@typescript-eslint/no-namespace": "off",
-		"@typescript-eslint/no-explicit-any": "off"
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/no-unused-vars": "off"
 	}
 }
