--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"markserv": "^1.17.4",
 		"prettier": "^3.1.1",
 		"ts-jest": "^29.1.1",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"zod": "^3.23.8"
 	},
 	"keywords": [
 		"ts",
