--- a/package.json
+++ b/package.json
@@ -1,65 +1,30 @@
 {
-	"name": "unenum",
+	"name": "pb.adt",
 	"version": "3.0.0",
-	"description": "Universal ADT utilities for TypeScript.",
 	"license": "MIT",
 	"author": "Peter Boyer <https://github.com/peterboyer>",
+	"description": "Universal ADT utilities.",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/peterboyer/unenum.git"
 	},
 	"type": "module",
-	"main": "./index.js",
-	"types": "./index.d.ts",
 	"exports": "./index.js",
+	"types": "./index.d.ts",
 	"sideEffects": false,
-	"scripts": {
-		"test": "./scripts/test.sh",
-		"test:e2e": "./scripts/test-e2e.sh",
-		"lint": "./scripts/lint.sh",
-		"lint:ts": "./scripts/lint-ts.sh",
-		"build": "./scripts/build.sh",
-		"build:link": "./scripts/build-link.sh",
-		"all": "concurrently \"yarn lint\" \"yarn lint:ts\" \"yarn test\" \"yarn docs:build && yarn build && yarn build:link && yarn test:e2e\"",
-		"docs": "concurrently \"yarn docs:serve\" \"yarn docs:watch\"",
-		"docs:serve": "markserv --address 0.0.0.0",
-		"docs:build": "./scripts/docs-build.sh",
-		"docs:watch": "SHELL=/bin/bash chokidar README.ts -c \"yarn docs:build\""
-	},
+	"prettier": "pkgts",
 	"devDependencies": {
-		"@tsconfig/esm": "^1.0.5",
-		"@tsconfig/strictest": "^2.0.2",
-		"@types/jest": "^29.5.11",
-		"@typescript-eslint/eslint-plugin": "^6.17.0",
-		"@typescript-eslint/parser": "^6.17.0",
-		"chokidar-cli": "^3.0.0",
-		"concurrently": "^8.2.2",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.1.2",
-		"jest": "^29.7.0",
-		"markserv": "^1.17.4",
-		"prettier": "^3.1.1",
-		"ts-jest": "^29.1.1",
-		"typescript": "^5.3.3",
+		"pb.expectequal": "^1.0.0",
+		"pkgts": "file:./pkgts",
 		"zod": "^3.23.8"
 	},
 	"keywords": [
-		"ts",
-		"typescript",
 		"adt",
 		"enum",
+		"sum",
 		"union",
 		"variant",
-		"result",
-		"future",
-		"match",
-		"ok",
-		"error",
-		"fp",
-		"sum",
-		"box",
-		"boxed",
-		"monad"
+		"ts",
+		"typescript"
 	]
 }
